# Github-User-Activity

./: README.md  gui.py  main.py  pyproject.toml  requirements.txt
tests/: mock.json  test_github_activity.py
